edit: config file and job hunting

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title:          jiriyu98
+title:          jiriyu
 description:    "What you know about computing other people will learn."
 url:            https://github.com/inelaah/rain
 
 # Author
 author:
-  name:         jiriyu98
+  name:         jiriyu
   email:        jiriyu98@gmail.com
   url:          https://github.com/jiriyu98
 
