--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -38,6 +38,7 @@ related_posts_section:
 
 # Links to social media
 social:
+  resume: /aboutme
   # email: jiriyu98@gmail.com
   github: https://github.com/jiriyu98
   # twitter: 
