fix: site title

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          jiriyu
+title:          想象力做功
 description:    "What you know about computing other people will learn."
 url:            https://github.com/inelaah/rain
 
