fix: unless posts and email address

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -40,6 +40,7 @@ related_posts_section:
 social:
   resume: /aboutme
   # email: jiriyu98@gmail.com
+  email-public: me@jiriyu.com
   github: https://github.com/jiriyu98
   # twitter: 
   # linkedin: https://www.linkedin.com/in/jiriyu/
