--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,21 +1,27 @@
 # Site settings
-title:          想象力做功
-description:    "What you know about computing other people will learn."
-url:            https://github.com/inelaah/rain
+title: 想象力做功
+index: /index.html
+title-en: Imagination Does Work
+index-en: /en/index/index.html
+title-jp: 想像力が働く
+index-jp: /jp/index/index.html
+
+description: "What you know about computing other people will learn."
+url: https://github.com/inelaah/rain
 
 # Author
 author:
-  name:         jiriyu
-  email:        jiriyu98@gmail.com
-  url:          https://github.com/jiriyu98
+  name: jiriyu
+  email: jiriyu98@gmail.com
+  url: https://github.com/jiriyu98
 
 # Build settings
-markdown:       kramdown
+markdown: kramdown
 
 # Assets
 sass:
-  sass_dir:     _sass
-  style:        compressed
+  sass_dir: _sass
+  style: compressed
 
 # multi-languages
 language_default: zh # default language
@@ -28,19 +34,57 @@ plugins:
   # - jemoji #Uncomment this to allow emoji in your post
 
 # Permalinks
-permalink:      /:year-:month-:day/:title
-paginate:       5
+defaults:
+  # Posts
+  # English
+  - scope:
+      path: "_posts/en"
+      type: posts
+    values:
+      permalink: /en/posts/:year-:month-:day/:title
+  # Japanese
+  - scope:
+      path: "_posts/jp"
+      type: posts
+    values:
+      permalink: /jp/posts/:year-:month-:day/:title
+  - scope:
+      path: "_posts/zh"
+      type: posts
+    values:
+      permalink: /zh/posts/:year-:month-:day/:title
+
+  # Index
+  - scope:
+      path: "index/en"
+      type: posts
+    values:
+      permalink: { { index-en } }
+  - scope:
+      path: "index/jp"
+      type: posts
+    values:
+      permalink: { { index-jp } }
+  - scope:
+      path: "index/zh"
+      type: posts
+    values:
+      permalink: { { index } }
+
+paginate: 5
 
 # Related posts settings
 related_posts_section:
-  max_count:        5
-  min_common_tags:  2
+  max_count: 5
+  min_common_tags: 2
 
 # Links to social media
 social:
-  resume: /aboutme
+  resume: /zh/aboutme
+  resume-en: /en/aboutme/
+  resume-jp: /jp/aboutme/
   # email: jiriyu98@gmail.com
   email-public: me@jiriyu.com
   github: https://github.com/jiriyu98
-  # twitter: 
+  # twitter:
   # linkedin: https://www.linkedin.com/in/jiriyu/
